# LTV-Valuation

./: .env.example  .gitignore  README.md  pyproject.toml
data/: loan_program_ltv.json  service_area_ltv.json
ltv_valuation/: __init__.py  address_suggestions.py  algorithms.py  ltv.py  main.py  models.py  property_summary.py  subject_matching.py  trestle_client.py  valuation.py
tests/: test_property_summary.py  test_valuation.py
