[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ltv-valuation"
version = "0.1.0"
description = "Python valuation engine and Trestle-backed property summary API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
ltv-valuation = "ltv_valuation.main:run"

[tool.setuptools.packages.find]
include = ["ltv_valuation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
